trunk/src/parser/output/GrammarParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g 2012-02-05 18:56:08

	package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**
  * Should take all symobls to tokens for TreeWalker (e.g., 'EXP)
  */
public class GrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNC_ARGS", "ID", "DOT", "DOT_CARET", "CARET", "SINGLE_QUOTE", "DOT_TRANSPOSE", "MINUS", "NOT", "DOT_STAR", "DOT_SLASH", "DOT_BACKSLASH", "STAR", "SLASH", "BACKSLASH", "PLUS", "COLON_ARGS", "LESS_THAN", "GREATER_THAN", "LESS_EQUAL", "GREATER_EQUL", "ISEQUAL", "NOT_EQUAL", "ELE_AND", "ELE_OR", "SC_AND", "SC_OR", "HCAT_VEC", "VCAT_VEC", "HCAT_CELL", "VCAT_CELL", "EQUALS", "IF", "ELSEIF", "ELSE", "IF_STAT", "SWITCH", "CASE", "OTHERWISE", "SWITCH_STAT", "FOR", "FOR_LOOP", "WHILE", "WHILE_LOOP", "BLOCK", "COMMA", "OPENP", "CLOSEP", "EMPTY_VEC", "EMPTY_CELL", "STRING_LITERAL", "END", "COLON", "TRUE", "FALSE", "INTEGER", "GREATER_EQUAL", "SEMI", "OPENB", "CLOSEB", "OPENC", "CLOSEC", "BLOCK_END", "BREAK", "CATCH", "CLASSDEF", "CONTINUE", "FUNCTION", "GLOBAL", "PARFOR", "PERSISTENT", "RETURN", "SPMD", "TRY", "AT", "CLOSE_BLOCK", "DOUBLE_QUOTE", "EXCLAMATION", "OPEN_BLOCK", "PERCENT", "DIGIT", "LETTER", "UNDERSCORE", "NEWLINE", "COMMENT", "ELLIPSIS", "EXPONENT", "WS"
    };
    public static final int EOF=-1;
    public static final int FUNC_ARGS=4;
    public static final int ID=5;
    public static final int DOT=6;
    public static final int DOT_CARET=7;
    public static final int CARET=8;
    public static final int SINGLE_QUOTE=9;
    public static final int DOT_TRANSPOSE=10;
    public static final int MINUS=11;
    public static final int NOT=12;
    public static final int DOT_STAR=13;
    public static final int DOT_SLASH=14;
    public static final int DOT_BACKSLASH=15;
    public static final int STAR=16;
    public static final int SLASH=17;
    public static final int BACKSLASH=18;
    public static final int PLUS=19;
    public static final int COLON_ARGS=20;
    public static final int LESS_THAN=21;
    public static final int GREATER_THAN=22;
    public static final int LESS_EQUAL=23;
    public static final int GREATER_EQUL=24;
    public static final int ISEQUAL=25;
    public static final int NOT_EQUAL=26;
    public static final int ELE_AND=27;
    public static final int ELE_OR=28;
    public static final int SC_AND=29;
    public static final int SC_OR=30;
    public static final int HCAT_VEC=31;
    public static final int VCAT_VEC=32;
    public static final int HCAT_CELL=33;
    public static final int VCAT_CELL=34;
    public static final int EQUALS=35;
    public static final int IF=36;
    public static final int ELSEIF=37;
    public static final int ELSE=38;
    public static final int IF_STAT=39;
    public static final int SWITCH=40;
    public static final int CASE=41;
    public static final int OTHERWISE=42;
    public static final int SWITCH_STAT=43;
    public static final int FOR=44;
    public static final int FOR_LOOP=45;
    public static final int WHILE=46;
    public static final int WHILE_LOOP=47;
    public static final int BLOCK=48;
    public static final int COMMA=49;
    public static final int OPENP=50;
    public static final int CLOSEP=51;
    public static final int EMPTY_VEC=52;
    public static final int EMPTY_CELL=53;
    public static final int STRING_LITERAL=54;
    public static final int END=55;
    public static final int COLON=56;
    public static final int TRUE=57;
    public static final int FALSE=58;
    public static final int INTEGER=59;
    public static final int GREATER_EQUAL=60;
    public static final int SEMI=61;
    public static final int OPENB=62;
    public static final int CLOSEB=63;
    public static final int OPENC=64;
    public static final int CLOSEC=65;
    public static final int BLOCK_END=66;
    public static final int BREAK=67;
    public static final int CATCH=68;
    public static final int CLASSDEF=69;
    public static final int CONTINUE=70;
    public static final int FUNCTION=71;
    public static final int GLOBAL=72;
    public static final int PARFOR=73;
    public static final int PERSISTENT=74;
    public static final int RETURN=75;
    public static final int SPMD=76;
    public static final int TRY=77;
    public static final int AT=78;
    public static final int CLOSE_BLOCK=79;
    public static final int DOUBLE_QUOTE=80;
    public static final int EXCLAMATION=81;
    public static final int OPEN_BLOCK=82;
    public static final int PERCENT=83;
    public static final int DIGIT=84;
    public static final int LETTER=85;
    public static final int UNDERSCORE=86;
    public static final int NEWLINE=87;
    public static final int COMMENT=88;
    public static final int ELLIPSIS=89;
    public static final int EXPONENT=90;
    public static final int WS=91;

    // delegates
    // delegators


        public GrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[41+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GrammarParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g"; }


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:75:1: start : prog EOF ;
    public final GrammarParser.start_return start() throws RecognitionException {
        GrammarParser.start_return retval = new GrammarParser.start_return();
        retval.start = input.LT(1);
        int start_StartIndex = input.index();
        CommonTree root_0 = null;

        Token EOF2=null;
        GrammarParser.prog_return prog1 = null;


        CommonTree EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:75:7: ( prog EOF )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:75:9: prog EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_prog_in_start204);
            prog1=prog();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, prog1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start206); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, start_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:77:1: prog : ( block )+ ;
    public final GrammarParser.prog_return prog() throws RecognitionException {
        GrammarParser.prog_return retval = new GrammarParser.prog_return();
        retval.start = input.LT(1);
        int prog_StartIndex = input.index();
        CommonTree root_0 = null;

        GrammarParser.block_return block3 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:77:7: ( ( block )+ )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:77:9: ( block )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:77:9: ( block )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=ID && LA1_0<=DOT)||(LA1_0>=MINUS && LA1_0<=NOT)||LA1_0==PLUS||LA1_0==IF||LA1_0==SWITCH||LA1_0==FOR||LA1_0==WHILE||LA1_0==OPENP||(LA1_0>=EMPTY_VEC && LA1_0<=INTEGER)||LA1_0==OPENB||LA1_0==OPENC) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:77:9: block
            	    {
            	    pushFollow(FOLLOW_block_in_prog217);
            	    block3=block();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, block3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, prog_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class functionArgs_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionArgs"
    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:1: functionArgs : expr ( COMMA expr )* -> ^( FUNC_ARGS ( expr )* ) ;
    public final GrammarParser.functionArgs_return functionArgs() throws RecognitionException {
        GrammarParser.functionArgs_return retval = new GrammarParser.functionArgs_return();
        retval.start = input.LT(1);
        int functionArgs_StartIndex = input.index();
        CommonTree root_0 = null;

        Token COMMA5=null;
        GrammarParser.expr_return expr4 = null;

        GrammarParser.expr_return expr6 = null;


        CommonTree COMMA5_tree=null;
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:14: ( expr ( COMMA expr )* -> ^( FUNC_ARGS ( expr )* ) )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:17: expr ( COMMA expr )*
            {
            pushFollow(FOLLOW_expr_in_functionArgs238);
            expr4=expr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expr.add(expr4.getTree());
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:22: ( COMMA expr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMA) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:23: COMMA expr
            	    {
            	    COMMA5=(Token)match(input,COMMA,FOLLOW_COMMA_in_functionArgs241); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_COMMA.add(COMMA5);

            	    pushFollow(FOLLOW_expr_in_functionArgs243);
            	    expr6=expr();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_expr.add(expr6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 89:36: -> ^( FUNC_ARGS ( expr )* )
            {
                // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:39: ^( FUNC_ARGS ( expr )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNC_ARGS, "FUNC_ARGS"), root_1);

                // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:89:51: ( expr )*
                while ( stream_expr.hasNext() ) {
                    adaptor.addChild(root_1, stream_expr.nextTree());

                }
                stream_expr.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, functionArgs_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "functionArgs"

    public static class functionCall_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionCall"
    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:1: functionCall : ( ID OPENP )=> ( ID ( ( OPENP ( functionArgs )? CLOSEP )? ) ) ;
    public final GrammarParser.functionCall_return functionCall() throws RecognitionException {
        GrammarParser.functionCall_return retval = new GrammarParser.functionCall_return();
        retval.start = input.LT(1);
        int functionCall_StartIndex = input.index();
        CommonTree root_0 = null;

        Token ID7=null;
        Token OPENP8=null;
        Token CLOSEP10=null;
        GrammarParser.functionArgs_return functionArgs9 = null;


        CommonTree ID7_tree=null;
        CommonTree OPENP8_tree=null;
        CommonTree CLOSEP10_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:15: ( ( ID OPENP )=> ( ID ( ( OPENP ( functionArgs )? CLOSEP )? ) ) )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:17: ( ID OPENP )=> ( ID ( ( OPENP ( functionArgs )? CLOSEP )? ) )
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:31: ( ID ( ( OPENP ( functionArgs )? CLOSEP )? ) )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:32: ID ( ( OPENP ( functionArgs )? CLOSEP )? )
            {
            ID7=(Token)match(input,ID,FOLLOW_ID_in_functionCall272); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID7_tree = (CommonTree)adaptor.create(ID7);
            root_0 = (CommonTree)adaptor.becomeRoot(ID7_tree, root_0);
            }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:91:36: ( ( OPENP ( functionArgs )? CLOSEP )? )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:92:17: ( OPENP ( functionArgs )? CLOSEP )?
            {
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:92:17: ( OPENP ( functionArgs )? CLOSEP )?
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:92:18: OPENP ( functionArgs )? CLOSEP
                    {
                    OPENP8=(Token)match(input,OPENP,FOLLOW_OPENP_in_functionCall280); if (state.failed) return retval;
                    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:92:25: ( functionArgs )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( ((LA3_0>=ID && LA3_0<=DOT)||(LA3_0>=MINUS && LA3_0<=NOT)||LA3_0==PLUS||LA3_0==OPENP||(LA3_0>=EMPTY_VEC && LA3_0<=INTEGER)||LA3_0==OPENB||LA3_0==OPENC) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:92:25: functionArgs
                            {
                            pushFollow(FOLLOW_functionArgs_in_functionCall283);
                            functionArgs9=functionArgs();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, functionArgs9.getTree());

                            }
                            break;

                    }

                    CLOSEP10=(Token)match(input,CLOSEP,FOLLOW_CLOSEP_in_functionCall286); if (state.failed) return retval;

                    }
                    break;

            }


            }


            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, functionCall_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "functionCall"

    public static class functionCallOrStructure_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionCallOrStructure"
    // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:99:1: functionCallOrStructure : functionCall ( DOT ( OPENP expr CLOSEP | functionCall ) )? ;
    public final GrammarParser.functionCallOrStructure_return functionCallOrStructure() throws RecognitionException {
        GrammarParser.functionCallOrStructure_return retval = new GrammarParser.functionCallOrStructure_return();
        retval.start = input.LT(1);
        int functionCallOrStructure_StartIndex = input.index();
        CommonTree root_0 = null;

        Token DOT12=null;
        Token OPENP13=null;
        Token CLOSEP15=null;
        GrammarParser.functionCall_return functionCall11 = null;

        GrammarParser.expr_return expr14 = null;

        GrammarParser.functionCall_return functionCall16 = null;


        CommonTree DOT12_tree=null;
        CommonTree OPENP13_tree=null;
        CommonTree CLOSEP15_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:99:25: ( functionCall ( DOT ( OPENP expr CLOSEP | functionCall ) )? )
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:99:27: functionCall ( DOT ( OPENP expr CLOSEP | functionCall ) )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_functionCall_in_functionCallOrStructure307);
            functionCall11=functionCall();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, functionCall11.getTree());
            // /Users/zach/Workspaces/Eclipse 3.5 Classic/GoogleMat1/parser/Grammar.g:99:40: ( DOT ( OPENP expr CLOSEP | functionCall ) )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==DOT) ) {
                int LA6_1 = input.LA(2);
